--- a/themes/homecoming/scss/site/_site.scss
+++ b/themes/homecoming/scss/site/_site.scss
@@ -59,17 +59,107 @@ body {
 /* Today's Events
 --------------------------------------------------------------- */
 .todays-events {
-  background-color: #f4f4f4;
+  background: #ebebe6 url(../images/diagonal.gif);
+  border-top: 1px solid rgba(0,0,0,.05);
+  border-bottom: 1px solid rgba(0,0,0,.05);
   margin-top: -15px;
+  padding: 2px 0;
 }
 .todays-events h3 {
-  border-bottom: 1px solid #ccc;
-  padding-bottom: 12px;
+  font-weight: bold;
+  margin-bottom: 1em;
+  text-align: center;
+  text-transform: uppercase;
+  & span {
+    display: inline-block;
+    position: relative;
+    &:before, &:after {
+      content: "";
+      position: absolute;
+      height: 5px;
+      border-bottom: 3px double #444;
+      border-bottom: 3px double rgba(0,0,0,.2);
+      top: 35%;
+      width: 90%;
+    }
+    &:before {
+      right: 100%;
+      margin-right: 15px;
+    }
+    &:after {
+      left: 100%;
+      margin-left: 15px;
+    }
+  }
+}
+.todays-events ul {
+  list-style:none;
+  margin: 0;
+  padding: 2px 0;
 }
 .todays-events ul li {
-  float: left;
-  padding: 0 .6666%;
-  width: 33.333%;
+  background-color: #fff;
+  box-shadow: 0 1px 1px rgba(0,0,0,.2);
+  @include rem(13);
+  margin-bottom: 1em;
+  @media screen and (min-width: $break-medium) {
+    margin-bottom: 0;
+    width: 32%; 
+  }
+}
+.today-content {
+  padding: 15px;
+  text-align: center;
+  & p {
+    margin: 0;
+  }
+  & .time {
+    font-size: 19px;
+  }
+}
+.todays-events-title {
+  margin: 0;
+  @include rem(18);
+  xfont-weight: bold;
+
+  background: #000;
+  xposition: absolute;
+  xleft: 0;
+  xtop: -20%;
+  padding: 10px;
+  line-height: 1.3;
+  width: 85%;
+  border-top: 2px solid $yellow;
+  margin-top: -9%;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  text-align: center;
+  line-height: 1.4;
+  text-transform: uppercase;
+  font-style: italic;
+  & a {
+    color: #fff;
+  }
+}
+.todays-events .event-img {
+  display: block;
+  position: relative;
+  & img {
+    display: block;
+    width: 100%;
+  }
+}
+.todays-events .event-img:before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,.3);
+  -webkit-transition: all .2s ease-in-out;
+}
+.todays-events .event-img:hover:before {
+  background-color: rgba(0,0,0,0);
 }
 
 /* Event Schedule
@@ -199,9 +289,66 @@ body {
   -o-user-select: none;
   user-select: none;
   text-decoration: none;
-  
+
   &:hover {
     background-color: #eee;
     border-color: #adadad;
+  }
+}
+
+/* Justify
+========================================================================== */
+.justify {
+  font-size: 0.1px;
+  overflow: hidden;
+  text-align: justify;
+}
+.justify:after {
+  content: '';
+  display: inline-block;
+  width: 100%;
+}
+.justify-item {
+  vertical-align: top;
+  width: 100%;
+  text-align: left;
+  display: inline-block;
+}
+.justify-2 .justify-item {
+  @media screen and (min-width: $break-small) {
+   width: 48%; 
+  }
+}
+.justify-3 .justify-item {
+  @media screen and (min-width: $break-small) {
+   width: 48%; 
+  }
+  @media screen and (min-width: $break-medium) {
+   width: 33.3333%; 
+  }
+}
+.justify-4 .justify-item {
+  @media screen and (min-width: $break-small) {
+   width: 48%; 
+  }
+  @media screen and (min-width: $break-medium) {
+   width: 23%; 
+  }
+}
+.justify .filler {
+  height: 0 !important;
+  margin: 0 !important;
+}
+
+/* Sponsors
+============================================================================ */
+.flexslider-sponsor {
+  margin: 5px 10px;
+  max-height: 120px;
+  overflow: auto;
+  padding: 0;
+  position: relative;
+  & li img {
+    display: block;
   }
 }
