--- a/themes/homecoming/scss/site/_site.scss
+++ b/themes/homecoming/scss/site/_site.scss
@@ -37,12 +37,29 @@ body {
 /* Hero Carousel
 --------------------------------------------------------------- */
 .hero {
-  background: url(http://placehold.it/1600x550&text=+) no-repeat center top;
-  xbackground-attachment: fixed;
   height: 350px;
 }
-.home-hero {
+.HomePage .hero {
 	height: 500px;
+}
+.hero-slider ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.hero-slider li {
+  height: 350px;
+  float: left;
+}
+.HomePage .hero-slider li {
+  height: 500px;
+  background-attachment: fixed;
+}
+.hero-slider li:nth-child(1) {
+  background: url(../images/homecoming_bg3.jpg) no-repeat center top;
+}
+.hero-slider li:nth-child(2) {
+  background: url(../images/homecoming_bg2.jpg) no-repeat center top;
 }
 
 
@@ -228,7 +245,7 @@ body {
   float: left;
 }
 .council-email {
-  font-size: 75%;
+  font-size: 85%;
   margin:0;
 }
 .council-title {
