styling button page
Signed-off-by: Brandon Ewoldt <bewoldt1@gmail.com>

--- a/themes/homecoming/scss/site/_site.scss
+++ b/themes/homecoming/scss/site/_site.scss
@@ -232,7 +232,16 @@ body {
 .filler {
   height: 0;
 }
+.button-item {
+  @include rem(13);
+}
 .button-img, .button-img img {display: block;}
+.button-year {
+  display: block;
+  @include rem(13);
+  margin: 5px 0;
+  text-align: center;
+}
 
 
 /* Council Member
