--- a/themes/homecoming/scss/global/_typography.scss
+++ b/themes/homecoming/scss/global/_typography.scss
@@ -58,6 +58,9 @@ ul ul,ul ol,ol ol,ol ul {
     margin-top: 0;
     margin-bottom: 0;
 }
+li {
+    margin-bottom: .5em;
+}
 .unstyled {
     list-style: none;
     margin: 0;
