--- a/themes/homecoming/scss/site/_site.scss
+++ b/themes/homecoming/scss/site/_site.scss
@@ -5,7 +5,7 @@ html {
 	line-height: 1.6;
 }
 body {
-	background: #fff;
+	background: #ebebe6;
 	color: #444;
 	font-family: $body-font;
 	margin: 0;
@@ -15,11 +15,12 @@ body {
 /* Layout
 --------------------------------------------------------------- */
 .container {
-	max-width: $break-large;
+	max-width: $break-xlarge;
 	margin-right: auto;
 	margin-left: auto;
-	xpadding-left: 2em;
-	xpadding-right: 2em;
+  position: relative;
+	padding-left: 2em;
+	padding-right: 2em;
 }
 .container-padding {
 	padding-top: 2em;
@@ -38,6 +39,7 @@ body {
 --------------------------------------------------------------- */
 .hero {
   height: 350px;
+  margin-top: -104px;
 }
 .HomePage .hero {
 	height: 500px;
@@ -50,18 +52,19 @@ body {
 .hero-slider li {
   height: 350px;
   float: left;
+  xbackground-attachment: fixed;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center top;
 }
 .HomePage .hero-slider li {
   height: 500px;
-  xbackground-attachment: fixed;
 }
 .hero-slider li:nth-child(1) {
-  background: url(../images/homecoming_bg3.jpg) no-repeat center top;
-  xbackground-attachment: fixed;
+  background-image: url(../images/homecoming_bg3.jpg);
 }
 .hero-slider li:nth-child(2) {
-  background: url(../images/homecoming_bg2.jpg) no-repeat center top;
-  xbackground-attachment: fixed;
+  background-image: url(../images/homecoming_bg2.jpg);
 }
 
 
@@ -78,14 +81,20 @@ body {
 /* Today's Events
 --------------------------------------------------------------- */
 .todays-events {
-  background: #ebebe6 url(../images/diagonal.gif);
+  background-color: #e8e8e3;
+  xbackground: #ebebe6 url(../images/diagonal.gif);
   border-top: 1px solid rgba(0,0,0,.05);
   border-bottom: 1px solid rgba(0,0,0,.05);
   margin-top: -15px;
   padding: 2px 0;
 }
+.todays-events .container {
+  padding-top: 6em;
+  padding-bottom: 6em;
+}
 .todays-events h3 {
   font-weight: bold;
+  margin-top: 0;
   margin-bottom: 1em;
   text-align: center;
   text-transform: uppercase;
@@ -121,9 +130,12 @@ body {
   box-shadow: 0 1px 1px rgba(0,0,0,.2);
   @include rem(13);
   margin-bottom: 1em;
+  border-radius: 4px;
+  overflow: hidden;
   @media screen and (min-width: $break-medium) {
     margin-bottom: 0;
-    width: 32%; 
+    width: 32%;
+    min-height: 375px;
   }
 }
 .today-content {
@@ -175,7 +187,7 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(0,0,0,.3);
-  -webkit-transition: all .2s ease-in-out;
+  -webkit-transition: all .4s ease-in-out;
 }
 .todays-events .event-img:hover:before {
   background-color: rgba(0,0,0,0);
@@ -209,7 +221,7 @@ body {
   content: '';
   display: inline-block;
   width: 100%;
-  
+
 }
 .justify .item {
   vertical-align: top;
@@ -218,13 +230,13 @@ body {
   text-align: center;
   display: inline-block;
   @media screen and (min-width: $break-small) {
-   width: 32%; 
+   width: 32%;
   }
   @media screen and (min-width: $break-medium) {
-   width: 23%; 
+   width: 23%;
   }
   @media screen and (min-width: $break-large) {
-   width: 15%; 
+   width: 15%;
   }
 }
 .item img {
@@ -344,23 +356,23 @@ body {
 }
 .justify-2 .justify-item {
   @media screen and (min-width: $break-small) {
-   width: 48%; 
+   width: 48%;
   }
 }
 .justify-3 .justify-item {
   @media screen and (min-width: $break-small) {
-   width: 48%; 
+   width: 48%;
   }
   @media screen and (min-width: $break-medium) {
-   width: 33.3333%; 
+   width: 33.3333%;
   }
 }
 .justify-4 .justify-item {
   @media screen and (min-width: $break-small) {
-   width: 48%; 
+   width: 48%;
   }
   @media screen and (min-width: $break-medium) {
-   width: 23%; 
+   width: 23%;
   }
 }
 .justify .filler {
