--- a/themes/homecoming/scss/site/_nav.scss
+++ b/themes/homecoming/scss/site/_nav.scss
@@ -1,24 +1,27 @@
+
 .main-nav-wrapper {
+  background-color: rgba(0,0,0,.5);
   position: relative;
   z-index: 1;
-  margin-top: 64px;
 }
 .main-nav {
-  display: table;
   list-style: none;
   margin: 0;
+  margin-left: 110px;
   padding: 0;
   > li {
-    display: table-cell;
+    float: left;
     position: relative;
-    xwidth: 5%;
+    margin: 0;
     & a {
+      color: #fff;
       display: block;
       padding: 10px 21px;
       text-align: center;
     }
   }
 }
+
 /* dropdown */
 .level-2 {
   background-color: #eee;
