--- a/themes/homecoming/scss/site/_header.scss
+++ b/themes/homecoming/scss/site/_header.scss
@@ -2,8 +2,10 @@
   background-color: #222;
   background-color: rgba(0,0,0,.75);
   box-shadow: 0 0 6px rgba(0,0,0,.2);
-  position: relative;
-  z-index: 10;
+  position: absolute;
+  top: 43px;
+  width: 100%;
+  z-index: 1000;
 }
 
 .logo {
