--- a/themes/homecoming/scss/site/_nav.scss
+++ b/themes/homecoming/scss/site/_nav.scss
@@ -13,18 +13,23 @@
     float: left;
     position: relative;
     margin: 0;
+    transition: all .2s ease-in-out;
     & a {
       color: #fff;
       display: block;
-      padding: 10px 21px;
+      padding: 10px 26px;
       text-align: center;
+      transition: all .2s ease-in-out;
+      &:hover {
+        color: #000;
+      }
     }
   }
 }
 
 /* dropdown */
 .level-2 {
-  background-color: #eee;
+  background-color: rgba(0,0,0,.75);
   position: absolute;
   top: 100%;
   left: 0;
@@ -48,7 +53,7 @@
   left: auto;
 }
 .main-nav > li:hover {
-  background-color: #eee;
+  background-color: $yellow;
 }
 .main-nav > li:hover ul {
   max-height: 200px;
