--- a/themes/homecoming/scss/site/_site.scss
+++ b/themes/homecoming/scss/site/_site.scss
@@ -1,11 +1,12 @@
-/* Base styles
+/* ---------------------------------------------------------------
+Base styles
 --------------------------------------------------------------- */
 html {
 	font-size: $base-font-size;
 	line-height: 1.6;
 }
 body {
-	background: #ebebe6 url(../images/bg_swatch.svg);
+	background: #f3f3ee;
 	color: #444;
 	font-family: $body-font;
 	margin: 0;
@@ -13,10 +14,23 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
-/* Layout
+/* ---------------------------------------------------------------
+Division Bar
+--------------------------------------------------------------- */
+.division-topbar {
+  box-shadow: 0 2px 2px rgba(0,0,0,.1);
+  z-index: 30;
+}
+.division-topbar .wrapper {
+  padding-left: 2em;
+  padding-right: 2em;
+}
+
+/* ---------------------------------------------------------------
+Layout
 --------------------------------------------------------------- */
 .container {
-	max-width: $break-xxlarge;
+	max-width: $break-large;
 	margin-right: auto;
 	margin-left: auto;
   position: relative;
@@ -27,32 +41,41 @@ body {
 	padding-top: 2em;
 	padding-bottom: 2em;
 }
+.main-content {
+  border-top: 1px solid rgba(0,0,0,.5);
+  box-shadow: inset 0 1px 0 #fff;
+}
 .main-content .container {
-  background-color: #fafafa;
+  background-color: #fff;
   margin-top: -50px;
   margin-left: 20px;
   margin-right: 20px;
   min-height: 700px;
-  padding: 60px;
+  padding: 50px;
   position: relative;
-  box-shadow: 0 0 6px rgba(0,0,0,.2);
-  @media screen and (min-width: $break-xxlarge) {
+  border: 1px solid rgba(0,0,0,.15);
+  box-shadow: 0 0 0 1px rgba(255,255,255,.5);
+  @media screen and (min-width: $break-large) {
     margin-left: auto;
     margin-right: auto;
   }
 }
 
-/* Hero Carousel
+/* ---------------------------------------------------------------
+Hero Carousel
 --------------------------------------------------------------- */
 .hero {
-
+  margin-top: -103px;
 }
 .featuredimage {
-  padding-top: 38%;
+  padding-top: 28%;
   background: transparent;
   position: relative;
   overflow: hidden;
   background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(0,0,0,0.8)), color-stop(10%, transparent));
+}
+.HomePage .featuredimage {
+  padding-top: 38%;
 }
 .loader {
   position: absolute;
@@ -147,12 +170,13 @@ body {
 }*/
 
 
-/* Events by Date
+/* ---------------------------------------------------------------
+Events by Date
 --------------------------------------------------------------- */
 .eventsbydate, .announcements {
-  background: #fff;
-  border: 1px solid #ddd;
-  padding: 1em;
+  xbackground: #fff;
+  xborder: 1px solid #ddd;
+  xpadding: 1em;
 }
 .eventsbydate li, .announcements li {
 	border-bottom: 1px solid #ddd;
@@ -167,12 +191,13 @@ body {
 }
 
 
-/* Today's Events
+/* ---------------------------------------------------------------
+Today's Events
 --------------------------------------------------------------- */
 .todays-events {
-  background-color: #e8e8e3;
-  xbackground: #ebebe6 url(../images/diagonal.gif);
-  border-top: 1px solid rgba(0,0,0,.05);
+  background-color: #e9e9e5;
+  border-top: 1px solid rgba(0,0,0,.11);
+  box-shadow: inset 0 1px 0 rgba(255,255,255,.5);
   border-bottom: 1px solid rgba(0,0,0,.05);
   margin-top: -50px;
   padding: 2px 0;
@@ -217,53 +242,17 @@ body {
 }
 .todays-events ul li {
   background-color: #fff;
-  box-shadow: 0 1px 1px rgba(0,0,0,.2);
+  border-bottom: 3px solid $yellow;
   @include rem(13);
   margin-bottom: 1em;
-  border-radius: 4px;
   overflow: hidden;
   @media screen and (min-width: $break-medium) {
     margin-bottom: 0;
     width: 32%;
-    min-height: 385px;
   }
 }
-.today-content {
-  padding: 25px 15px;
-  text-align: center;
-  & p {
-    margin: 0;
-  }
-  & .time {
-    font-size: 19px;
-  }
-}
-.todays-events-title {
-  margin: 0;
-  @include rem(18);
-  xfont-weight: bold;
 
-  background: #000;
-  xposition: absolute;
-  xleft: 0;
-  xtop: -20%;
-  padding: 10px;
-  line-height: 1.3;
-  width: 85%;
-  border-top: 2px solid $yellow;
-  margin-top: -9%;
-  margin-left: auto;
-  margin-right: auto;
-  position: relative;
-  text-align: center;
-  line-height: 1.4;
-  text-transform: uppercase;
-  font-style: italic;
-  & a {
-    color: #fff;
-  }
-}
-.todays-events .event-img {
+.today-imgwrapper {
   display: block;
   position: relative;
   & img {
@@ -271,7 +260,7 @@ body {
     width: 100%;
   }
 }
-.todays-events .event-img:before {
+.today-imgwrapper:before {
   content: '';
   position: absolute;
   width: 100%;
@@ -279,13 +268,45 @@ body {
   background-color: rgba(0,0,0,.3);
   -webkit-transition: all .4s ease-in-out;
 }
-.todays-events .event-img:hover:before {
+.todays-events a:hover .today-imgwrapper:before {
   background-color: rgba(0,0,0,0);
+}
+.today-content {
+  padding: 25px 15px;
+  & p {
+    margin: 0;
+  }
+  & .time {
+    font-size: 19px;
+  }
+}
+.today-date {
+  color: #666;
+  font-size: 14px;
+  margin: 0 0 5px;
+  text-transform: uppercase;
+}
+.today-title {
+  color: #1a1a1a;
+  font-size: 22px;
+  line-height: 1.4;
+  margin: 0;
+}
+.todays-events a {
+  display: block;
+  text-decoration: none;
+  &:hover {
+    text-decoration: none;
+  }
+  @media (min-width: $break-medium) {
+    min-height: 385px;
+  }
 }
 
 
 
-/* Button Schedule
+/* ---------------------------------------------------------------
+Button Schedule
 --------------------------------------------------------------- */
 .justify {
   list-style: none;
@@ -335,7 +356,8 @@ body {
 }
 
 
-/* Council Member
+/* ---------------------------------------------------------------
+Council Member
 --------------------------------------------------------------- */
 .council-member li {
   border-bottom: 1px solid #eee;
@@ -359,7 +381,8 @@ body {
 }
 
 
-/* Admin Login form fields
+/* ---------------------------------------------------------------
+Admin Login form fields
 --------------------------------------------------------------- */
 #MemberLoginForm_LoginForm fieldset {
   width: 50%;
@@ -413,8 +436,9 @@ body {
   }
 }
 
-/* Justify
-========================================================================== */
+/* ---------------------------------------------------------------
+Justify
+--------------------------------------------------------------- */
 .justify {
   font-size: 0.1px;
   overflow: hidden;
@@ -457,8 +481,9 @@ body {
   margin: 0 !important;
 }
 
-/* Sponsors
-============================================================================ */
+/* ---------------------------------------------------------------
+Sponsors
+--------------------------------------------------------------- */
 .sponsors {
   background: #fff;
   padding: 1px 0;
@@ -478,4 +503,27 @@ body {
   & li img {
     display: block;
   }
+}
+
+
+.full-image .content-image img {
+  display: block;
+}
+.content {
+  min-height: 700px;
+  padding-right: 270px;
+  padding-top: 1px;
+  position: relative;
+}
+
+
+.sidebar {
+  position: absolute;
+  xbackground: #dfe1e4;
+  padding-top: 30px;
+  top: 35px;
+  right: 0;
+  width: 230px;
+  height: 100%;
+  top: 0;
 }
