restructuring content layout
Signed-off-by: Brandon Ewoldt <bewoldt1@gmail.com>

--- a/themes/homecoming/scss/master.scss
+++ b/themes/homecoming/scss/master.scss
@@ -35,6 +35,8 @@
 @import "site/_footer";
 @import "site/_nav";
 @import "site/_calendar";
+@import "site/_todaysevents";
+@import "site/_breadcrumbs";
 
 /* Site specific styles
 -------------------------------------------*/
