--- a/themes/homecoming/scss/site/_footer.scss
+++ b/themes/homecoming/scss/site/_footer.scss
@@ -12,7 +12,7 @@
   @media screen and (min-width: $break-small) {
     @include rem(12);
   }
-  
+
 }
 .footer a {
   color: #eee;
@@ -20,7 +20,7 @@
 .footer h4 {
   color: #eee;
   font-weight: 300;
-  
+
   text-transform: uppercase;
   @media screen and (min-width: $break-small) {
     margin-top: 0;
@@ -31,6 +31,9 @@
   list-style: none;
   margin: 0;
   padding: 1em 0 0;
+  & li {
+    margin-bottom: 0;
+  }
   @media screen and (min-width: $break-small) {
     border-left: 1px solid #000;
   }
