--- a/themes/homecoming/scss/global/_typography.scss
+++ b/themes/homecoming/scss/global/_typography.scss
@@ -15,7 +15,7 @@ h1,h2,h3,h4,h5,h6 {
     font-family: $heading-font;
     margin: 1em 0 0.5em;
     line-height: 1.1;
-    font-weight: 300;
+    font-weight: bold;
     text-rendering: optimizelegibility;
 }
 h1 {
