--- a/themes/homecoming/scss/site/_calendar.scss
+++ b/themes/homecoming/scss/site/_calendar.scss
@@ -1,157 +1,44 @@
-/* Event Schedule
+/* ---------------------------------------------------------------
+Schedule
 --------------------------------------------------------------- */
-.events-list .event {
-display: block;
-position: relative;
-background: #fff;
-xfont-size: 0;
-text-decoration: none;
-transition: all .25s ease-in-out;
-border-bottom: 1px solid rgba(0,0,0,.1);
+.event-list {
+  padding: 30px 35px;
 }
-.events-list:nth-of-type(odd) .event {
-  xbackground: #f2f3f4;
+.list-item {
+  border-bottom: 1px solid #eee;
+  margin-bottom: 1em;
+  padding-bottom: 1em;
 }
-.events-list .event:hover {
-  border-color: rgba(0,0,0,.1);
-  background-color: #f2f3f4;
+.list-item:last-of-type {
+  border-bottom: none;
+  margin-bottom: 0;
+  padding-bottom: 0;
 }
-/* Image */
-.events-list .image {
-position: absolute;
-left: 0;
-top: 0;
-height: 100%;
-width: 35%;
-font-size: 0;
-overflow: hidden;
-background: #f8f8f8 url(im/placeholder.svg) no-repeat center;
-background-size: 60% auto;
-}
-.image .bg {
-height: 102%;
-width: 102%;
-margin: -.5% 0 0 -.5%;
-background-position: 49.9%;
-background-size: cover;
-}
-.image .bg {
-position: absolute;
-top: 0;
-left: 0;
-width: 100%;
-}
-.date {
-position: absolute;
-right: 30px;
-top: 30px;
-width: 90px;
-height: 90px;
-color: #fff;
-background: #333;
-background: rgba(0,0,0,.6);
-text-align: center;
-padding: 10px;
-}
-.date span {
-font-size: 14px;
-font-weight: 400;
-line-height: 1.3;
-display: block;
-}
-.date span.lrg {
-font-size: 45px;
-font-weight: 600;
-}
-
-/* Content */
-.events-list .content {
-position: relative;
-height: 250px;
-margin-left: 35%;
-padding: 30px;
-}
-a .content {
-color: #333;
-}
-.events-list h5 {
-display: inline-block;
-font-size: 15px;
-margin-top: 0;
-margin-bottom: .6em;
-margin-right: 12px;
-text-transform: uppercase;
-}
-
-.events-list h5.series, h5.featured-event {
-position: relative;
-top: -1px;
-color: #fff;
-padding: 5px;
-line-height: 1;
-display: inline-block;
-}
-h5.featured-event {
-  background: #f8825e;
-}
-h5.featured-event {
-color: #fff!important;
-}
-.events-list h5.series {
-background: #aaa;
-}
-.events-list h3 {
-  font-weight: 300;
-  line-height: 1.4;
-  font-size: 28px;
-  max-width: 75%;
-  margin-top: 0;
-  margin-bottom: .3em;
-}
-
-.events-list .event-meta {
-position: absolute;
-bottom: 23px;
-left: 30px;
-right: 30px;
-}
-.events-list p {
-font-weight: 600;
-margin-bottom: .2em;
-}
-.events-list time {
-display: block;
-font-size: 15px;
-font-weight: 400;
-margin-bottom: 15px;
-color: #666;
-}
-.read-more {
-font-size: 14px;
-font-weight: 600;
-color: #f75222;
-}
-.events-list .read-more {
-border-top: 1px solid rgba(0,0,0,.1);
-color: #f8825e;
-padding-top: 8px;
-}
-
-
-
-
-
-
-
-/*.event-wrap .event-img {
+.list-item .img {
   display: block;
   float: left;
-  width: 40%;
+  & img {
+    display: block;
+  }
 }
-.event-wrap .event-meta, .event-wrap .event-desc {
-  margin-left: 45%;
+.list-item .list-content {
+  margin-left: 220px;
 }
-.event-meta dt {
-  float: left;
-  margin-right: 1em;
-}*/
+.list-item .title {
+  font-size: 24px;
+  line-height: 1.3;
+  margin: 0;
+}
+.list-item .meta {
+  font-size: 14px;
+}
+.list-item .list-desc {
+  margin-bottom: 0;
+}
+
+/* ---------------------------------------------------------------
+Event Page
+--------------------------------------------------------------- */
+.event-img img {
+  display: block;
+}
