--- a/themes/homecoming/scss/site/_site.scss
+++ b/themes/homecoming/scss/site/_site.scss
@@ -11,19 +11,19 @@ body {
 	font-family: $body-font;
 	margin: 0;
 	padding: 0;
-  -webkit-font-smoothing: antialiased;
+	-webkit-font-smoothing: antialiased;
 }
 
 /* ---------------------------------------------------------------
 Division Bar
 --------------------------------------------------------------- */
 .division-topbar {
-  box-shadow: 0 2px 2px rgba(0,0,0,.1);
-  z-index: 30;
+	box-shadow: 0 2px 2px rgba(0,0,0,.1);
+	z-index: 30;
 }
 .division-topbar .wrapper {
-  padding-left: 2em;
-  padding-right: 2em;
+	padding-left: 2em;
+	padding-right: 2em;
 }
 
 /* ---------------------------------------------------------------
@@ -33,140 +33,139 @@ Layout
 	max-width: $break-large;
 	margin-right: auto;
 	margin-left: auto;
-  position: relative;
-	padding-left: 2em;
-	padding-right: 2em;
+	padding: 0;
+	position: relative;
 }
-.container-padding {
-	padding-top: 2em;
-	padding-bottom: 2em;
+.main {
+	position: relative;
+	z-index: 10;
 }
 .main-content {
-  border-top: 1px solid rgba(0,0,0,.5);
-  box-shadow: inset 0 1px 0 #fff;
+	border-top: 1px solid rgba(0,0,0,.5);
+	box-shadow: inset 0 1px 0 #fff;
 }
-.main-content .container {
-  background-color: #fff;
-  margin-top: -50px;
-  margin-left: 20px;
-  margin-right: 20px;
-  min-height: 700px;
-  padding: 50px;
-  position: relative;
-  border: 1px solid rgba(0,0,0,.15);
-  box-shadow: 0 0 0 1px rgba(255,255,255,.5);
-  @media screen and (min-width: $break-large) {
-    margin-left: auto;
-    margin-right: auto;
-  }
+.main-content {
+	background-color: #fff;
+	margin-top: -50px;
+	min-height: 700px;
+	xpadding: 50px;
+	position: relative;
+	border: 1px solid rgba(0,0,0,.15);
+	box-shadow: 0 0 0 1px rgba(255,255,255,.5);
+}
+.article {
+	padding: 30px 35px;
+}
+.page-title {
+	margin-top: .25em;
 }
 
 /* ---------------------------------------------------------------
 Hero Carousel
 --------------------------------------------------------------- */
 .hero {
-  margin-top: -103px;
+	margin-top: -103px;
 }
 .featuredimage {
-  padding-top: 28%;
-  background: transparent;
-  position: relative;
-  overflow: hidden;
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(0,0,0,0.8)), color-stop(10%, transparent));
+	padding-top: 28%;
+	background: transparent;
+	position: relative;
+	overflow: hidden;
+	background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(0,0,0,0.8)), color-stop(10%, transparent));
 }
 .HomePage .featuredimage {
-  padding-top: 38%;
+	padding-top: 38%;
 }
 .loader {
-  position: absolute;
-  background: url(../images/spinner.png);
-  width: 80px;
-  height: 80px;
-  left: 50%;
-  top: 40%;
-  margin: -40px auto auto -40px;
-  -webkit-background-size: 100% auto;
-  -moz-background-size: 100% auto;
-  -ms-background-size: 100% auto;
-  -o-background-size: 100% auto;
-  background-size: 100% auto;
-  -webkit-animation: spinnerRotate 1s infinite linear;
-  -moz-animation: spinnerRotate 1s infinite linear;
-  -ms-animation: spinnerRotate 1s infinite linear;
-  -o-animation: spinnerRotate 1s infinite linear;
-  animation: spinnerRotate 1s infinite linear;
+	position: absolute;
+	background: url(../images/spinner.png);
+	width: 80px;
+	height: 80px;
+	left: 50%;
+	top: 40%;
+	margin: -40px auto auto -40px;
+	-webkit-background-size: 100% auto;
+	-moz-background-size: 100% auto;
+	-ms-background-size: 100% auto;
+	-o-background-size: 100% auto;
+	background-size: 100% auto;
+	-webkit-animation: spinnerRotate 1s infinite linear;
+	-moz-animation: spinnerRotate 1s infinite linear;
+	-ms-animation: spinnerRotate 1s infinite linear;
+	-o-animation: spinnerRotate 1s infinite linear;
+	animation: spinnerRotate 1s infinite linear;
 }
 @-webkit-keyframes spinnerRotate {
-  from {
-    -webkit-transform:rotate(0deg);
-  }
-  to {
-    -webkit-transform:rotate(360deg);
-  }
+	from {
+		-webkit-transform:rotate(0deg);
+	}
+	to {
+		-webkit-transform:rotate(360deg);
+	}
 }
 
 @-moz-keyframes spinnerRotate {
-  from {
-    -moz-transform:rotate(0deg);
-  }
-  to {
-    -moz-transform:rotate(360deg);
-  }
+	from {
+		-moz-transform:rotate(0deg);
+	}
+	to {
+		-moz-transform:rotate(360deg);
+	}
 }
 
 @-o-keyframes spinnerRotate {
-  from {
-    -o-transform:rotate(0deg);
-  }
-  to {
-    -o-transform:rotate(360deg);
-  }
+	from {
+		-o-transform:rotate(0deg);
+	}
+	to {
+		-o-transform:rotate(360deg);
+	}
 }
 
 @keyframes spinnerRotate {
-  from {
-    transform:rotate(0deg);
-  }
-  to {
-    transform:rotate(360deg);
-  }
+	from {
+		transform:rotate(0deg);
+	}
+	to {
+		transform:rotate(360deg);
+	}
 }
 .hero-slider {
-  position: absolute;
-  top: 0;
-  width: 100%;
+	position: absolute;
+	top: 0;
+	width: 100%;
 }
 
 .hero-slider li img {
-  position: absolute;
-  width: 100%;
-  height: auto;
-  left: 0;
+	position: absolute;
+	width: 100%;
+	height: auto;
+	left: 0;
 }
 /*.HomePage .hero {
 	height: 550px;
 }
 .hero-slider ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
+	list-style: none;
+	margin: 0;
+	padding: 0;
 }
 .hero-slider li {
-  height: 350px;
-  float: left;
-  xbackground-attachment: fixed;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center top;
+	height: 350px;
+	float: left;
+	xbackground-attachment: fixed;
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center top;
 }
 .HomePage .hero-slider li {
-  height: 550px;
+	height: 550px;
 }*/
 /*.hero-slider li:nth-child(1) {
-  background-image: url(../images/homecoming_bg3.jpg);
+	background-image: url(../images/homecoming_bg3.jpg);
 }
 .hero-slider li:nth-child(2) {
-  background-image: url(../images/homecoming_bg4.jpg);
+	background-image: url(../images/homecoming_bg4.jpg);
 }*/
 
 
@@ -174,133 +173,20 @@ Hero Carousel
 Events by Date
 --------------------------------------------------------------- */
 .eventsbydate, .announcements {
-  xbackground: #fff;
-  xborder: 1px solid #ddd;
-  xpadding: 1em;
+	xbackground: #fff;
+	xborder: 1px solid #ddd;
+	xpadding: 1em;
 }
 .eventsbydate li, .announcements li {
 	border-bottom: 1px solid #ddd;
 	padding: 5px;
-  &:last-of-type {
-    border-bottom: none;
-    margin-bottom: 0;
-  }
+	&:last-of-type {
+		border-bottom: none;
+		margin-bottom: 0;
+	}
 	& a {
 		display: block;
 	}
-}
-
-
-/* ---------------------------------------------------------------
-Today's Events
---------------------------------------------------------------- */
-.todays-events {
-  background-color: #e9e9e5;
-  border-top: 1px solid rgba(0,0,0,.11);
-  box-shadow: inset 0 1px 0 rgba(255,255,255,.5);
-  border-bottom: 1px solid rgba(0,0,0,.05);
-  margin-top: -50px;
-  padding: 2px 0;
-}
-.todays-events .container {
-  padding-top: 6em;
-  padding-bottom: 6em;
-}
-.todays-events h3 {
-  xfont-weight: bold;
-  margin-top: 0;
-  margin-bottom: 1em;
-  text-align: center;
-  text-transform: uppercase;
-  & span {
-    display: inline-block;
-    position: relative;
-    &:before, &:after {
-      content: "";
-      position: absolute;
-      height: 2px;
-      border-top: 1px solid rgba(0,0,0,.12);
-      border-bottom: 1px solid rgba(255,255,255,.6);
-      top: 47%;
-      width: 90%;
-
-    }
-    &:before {
-      right: 100%;
-      margin-right: 15px;
-    }
-    &:after {
-      left: 100%;
-      margin-left: 15px;
-    }
-  }
-}
-.todays-events ul {
-  list-style:none;
-  margin: 0;
-  padding: 2px 0;
-}
-.todays-events ul li {
-  background-color: #fff;
-  border-bottom: 3px solid $yellow;
-  @include rem(13);
-  margin-bottom: 1em;
-  overflow: hidden;
-  @media screen and (min-width: $break-medium) {
-    margin-bottom: 0;
-    width: 32%;
-  }
-}
-
-.today-imgwrapper {
-  display: block;
-  position: relative;
-  & img {
-    display: block;
-    width: 100%;
-  }
-}
-.today-imgwrapper:before {
-  content: '';
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0,0,0,.3);
-  -webkit-transition: all .4s ease-in-out;
-}
-.todays-events a:hover .today-imgwrapper:before {
-  background-color: rgba(0,0,0,0);
-}
-.today-content {
-  padding: 25px 15px;
-  & p {
-    margin: 0;
-  }
-  & .time {
-    font-size: 19px;
-  }
-}
-.today-date {
-  color: #666;
-  font-size: 14px;
-  margin: 0 0 5px;
-  text-transform: uppercase;
-}
-.today-title {
-  color: #1a1a1a;
-  font-size: 22px;
-  line-height: 1.4;
-  margin: 0;
-}
-.todays-events a {
-  display: block;
-  text-decoration: none;
-  &:hover {
-    text-decoration: none;
-  }
-  @media (min-width: $break-medium) {
-    min-height: 385px;
-  }
 }
 
 
@@ -309,75 +195,91 @@ Today's Events
 Button Schedule
 --------------------------------------------------------------- */
 .justify {
-  list-style: none;
-  margin: 0 auto;
-  padding: 0;
-  overflow: hidden;
-  text-align: justify;
+	list-style: none;
+	margin: 0 auto;
+	padding: 0;
+	overflow: hidden;
+	text-align: justify;
 }
 .justify:after {
-  content: '';
-  display: inline-block;
-  width: 100%;
+	content: '';
+	display: inline-block;
+	width: 100%;
 
 }
 .justify .item {
-  vertical-align: top;
-  margin-bottom: 1em;
-  width: 48%;
-  text-align: center;
-  display: inline-block;
-  @media screen and (min-width: $break-small) {
-   width: 32%;
-  }
-  @media screen and (min-width: $break-medium) {
-   width: 23%;
-  }
-  @media screen and (min-width: $break-large) {
-   width: 15%;
-  }
+	vertical-align: top;
+	margin-bottom: 1em;
+	width: 48%;
+	text-align: center;
+	display: inline-block;
+	@media screen and (min-width: $break-small) {
+	 width: 32%;
+	}
+	@media screen and (min-width: $break-medium) {
+	 width: 23%;
+	}
+	@media screen and (min-width: $break-large) {
+	 width: 15%;
+	}
 }
 .item img {
-  width: 100%;
-  border-radius: 50%;
+	width: 100%;
+	border-radius: 50%;
 }
 .filler {
-  height: 0;
+	height: 0;
 }
 .button-item {
-  @include rem(13);
+	@include rem(13);
 }
 .button-img, .button-img img {display: block;}
 .button-year {
-  display: block;
-  @include rem(13);
-  margin: 5px 0;
-  text-align: center;
+	display: block;
+	@include rem(13);
+	margin: 5px 0;
+	text-align: center;
 }
 
 
 /* ---------------------------------------------------------------
-Council Member
+Council Members
 --------------------------------------------------------------- */
-.council-member li {
+.council-list {
+	margin-top: 3em;
+}
+.council-member {
   border-bottom: 1px solid #eee;
-  padding: 20px 0 10px;
+  margin-bottom: 1em;
+  padding-bottom: 1em;
 }
-.council-member img {
-  float: left;
+.council-member:last-of-type {
+  border-bottom: none;
+  margin-bottom: 0;
+  padding-bottom: 0;
 }
-.council-email {
-  font-size: 85%;
-  margin:0;
+.council-img {
+	border-radius: 3px;
+	overflow: hidden;
+	float: left;
+	& img {
+		display: block;
+	}
+}
+.council-content {
+	margin-left: 220px;
 }
 .council-title {
-  margin-top: 0;
+	font-size: 24px;
+	line-height: 1.3;
+	margin: 0 0 2px;
 }
-.council-title, .council-bio, .council-email {
-  margin-left: 170px;
+.council-pos {
+	font-size: 13px;
+	margin: 0;
 }
 .council-bio p {
-  font-size: 15px;
+  margin-bottom: 0;
 }
 
 
@@ -385,145 +287,148 @@ Council Member
 Admin Login form fields
 --------------------------------------------------------------- */
 #MemberLoginForm_LoginForm fieldset {
-  width: 50%;
+	width: 50%;
 }
 #MemberLoginForm_LoginForm .field .text {
-  display: block;
-  width: 100%;
-  height: 34px;
-  padding: 6px 12px;
-  font-size: 14px;
-  line-height: 1.428571429;
-  color: #555555;
-  vertical-align: middle;
-  background-color: #ffffff;
-  border: 1px solid #cccccc;
-  border-radius: 4px;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-  -webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
-  transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+	display: block;
+	width: 100%;
+	height: 34px;
+	padding: 6px 12px;
+	font-size: 14px;
+	line-height: 1.428571429;
+	color: #555555;
+	vertical-align: middle;
+	background-color: #ffffff;
+	border: 1px solid #cccccc;
+	border-radius: 4px;
+	-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+	box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+	-webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+	transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
 }
 #MemberLoginForm_LoginForm #Remember label.right {
-  float: left;
+	float: left;
 }
 #MemberLoginForm_LoginForm .Actions .action {
-  display: inline-block;
-  padding: 6px 12px;
-  margin-bottom: 0;
-  font-size: 14px;
-  font-weight: normal;
-  line-height: 1.428571429;
-  text-align: center;
-  white-space: nowrap;
-  vertical-align: middle;
-  cursor: pointer;
-  color: #333;
-  background-image: none;
-  background-color: #fff;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  -o-user-select: none;
-  user-select: none;
-  text-decoration: none;
+	display: inline-block;
+	padding: 6px 12px;
+	margin-bottom: 0;
+	font-size: 14px;
+	font-weight: normal;
+	line-height: 1.428571429;
+	text-align: center;
+	white-space: nowrap;
+	vertical-align: middle;
+	cursor: pointer;
+	color: #333;
+	background-image: none;
+	background-color: #fff;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	-o-user-select: none;
+	user-select: none;
+	text-decoration: none;
 
-  &:hover {
-    background-color: #eee;
-    border-color: #adadad;
-  }
+	&:hover {
+		background-color: #eee;
+		border-color: #adadad;
+	}
 }
 
 /* ---------------------------------------------------------------
 Justify
 --------------------------------------------------------------- */
 .justify {
-  font-size: 0.1px;
-  overflow: hidden;
-  text-align: justify;
+	font-size: 0.1px;
+	overflow: hidden;
+	text-align: justify;
 }
 .justify:after {
-  content: '';
-  display: inline-block;
-  width: 100%;
+	content: '';
+	display: inline-block;
+	width: 100%;
 }
 .justify-item {
-  vertical-align: top;
-  width: 100%;
-  text-align: left;
-  display: inline-block;
+	vertical-align: top;
+	width: 100%;
+	text-align: left;
+	display: inline-block;
 }
 .justify-2 .justify-item {
-  @media screen and (min-width: $break-small) {
-   width: 48%;
-  }
+	@media screen and (min-width: $break-small) {
+	 width: 48%;
+	}
 }
 .justify-3 .justify-item {
-  @media screen and (min-width: $break-small) {
-   width: 48%;
-  }
-  @media screen and (min-width: $break-medium) {
-   width: 32%;
-  }
+	@media screen and (min-width: $break-small) {
+	 width: 48%;
+	}
+	@media screen and (min-width: $break-medium) {
+	 width: 32%;
+	}
 }
 .justify-4 .justify-item {
-  @media screen and (min-width: $break-small) {
-   width: 48%;
-  }
-  @media screen and (min-width: $break-medium) {
-   width: 23%;
-  }
+	@media screen and (min-width: $break-small) {
+	 width: 48%;
+	}
+	@media screen and (min-width: $break-medium) {
+	 width: 23%;
+	}
 }
 .justify .filler {
-  height: 0 !important;
-  margin: 0 !important;
+	height: 0 !important;
+	margin: 0 !important;
 }
 
 /* ---------------------------------------------------------------
 Sponsors
 --------------------------------------------------------------- */
 .sponsors {
-  background: #fff;
-  padding: 1px 0;
+	background: #fff;
+	padding: 1px 0;
 }
 .flexslider-sponsor {
-  padding: 5px 10px 10px;
-  overflow: auto;
-  position: relative;
-  & ul {
-    overflow: hidden;
-    max-height: 120px;
-  }
-  & li {
-    float: left;
-    margin: 0;
-  }
-  & li img {
-    display: block;
-  }
+	padding: 5px 10px 10px;
+	overflow: auto;
+	position: relative;
+	& ul {
+		overflow: hidden;
+		max-height: 120px;
+	}
+	& li {
+		float: left;
+		margin: 0;
+	}
+	& li img {
+		display: block;
+	}
 }
-
+.sponsors .title {
+	font-size: 18px;
+	text-align: center;
+	text-transform: uppercase;
+}
 
 .full-image .content-image img {
-  display: block;
+	display: block;
 }
 .content {
-  min-height: 700px;
-  padding-right: 270px;
-  padding-top: 1px;
-  position: relative;
+	min-height: 700px;
+	padding-right: 300px;
+	xpadding-top: 1px;
+	position: relative;
 }
 
 
 .sidebar {
-  position: absolute;
-  xbackground: #dfe1e4;
-  padding-top: 30px;
-  top: 35px;
-  right: 0;
-  width: 230px;
-  height: 100%;
-  top: 0;
+	position: absolute;
+	background: #f5f5f5;
+	right: 0;
+	width: 300px;
+	height: 100%;
+	top: 0;
+	padding: 30px;
 }
