--- a/themes/homecoming/scss/site/_todaysevents.scss
+++ b/themes/homecoming/scss/site/_todaysevents.scss
@@ -2,7 +2,7 @@
 Today's Events
 --------------------------------------------------------------- */
 .todays-events {
-   background-color: #e9e9e5;
+   background: #e9e9e5 url(../images/bg-patterned.png);
    border-top: 1px solid rgba(0,0,0,.11);
    box-shadow: inset 0 1px 0 rgba(255,255,255,.5);
    border-bottom: 1px solid rgba(0,0,0,.05);
