--- a/themes/homecoming/scss/site/_calendar.scss
+++ b/themes/homecoming/scss/site/_calendar.scss
@@ -32,6 +32,9 @@ Schedule
   font-size: 24px;
   line-height: 1.3;
   margin: 0;
+  & a {
+    color: #333;
+  }
 }
 .list-item .meta {
   font-size: 14px;
