--- a/themes/homecoming/scss/site/_site.scss
+++ b/themes/homecoming/scss/site/_site.scss
@@ -225,6 +225,13 @@ Button Schedule
 .filler {
 	height: 0;
 }
+
+.button-archive {
+	margin-top: 3em;
+	border-top: 4px solid $yellow;
+  	padding-top: 30px;
+	margin-top: 35px;
+}
 .button-item {
 	@include rem(13);
 }
