--- a/themes/homecoming/scss/site/_site.scss
+++ b/themes/homecoming/scss/site/_site.scss
@@ -22,6 +22,7 @@ Division Bar
 	z-index: 30;
 }
 .division-topbar .wrapper {
+	max-width: 1040px;
 	padding-left: 2em;
 	padding-right: 2em;
 }
@@ -46,7 +47,7 @@ Layout
 }
 .main-content {
 	background-color: #fff;
-	margin-top: -50px;
+	margin-top: -25px;
 	min-height: 700px;
 	xpadding: 50px;
 	position: relative;
@@ -141,6 +142,9 @@ Hero Carousel
 	width: 100%;
 	height: auto;
 	left: 0;
+}
+.slides li {
+	margin-bottom: 0;
 }
 /*.HomePage .hero {
 	height: 550px;
@@ -412,6 +416,7 @@ Sponsors
 }
 .sponsors .title {
 	font-size: 18px;
+	margin: 1em 0;
 	text-align: center;
 	text-transform: uppercase;
 }
