--- a/themes/homecoming/scss/site/_todaysevents.scss
+++ b/themes/homecoming/scss/site/_todaysevents.scss
@@ -32,7 +32,7 @@ Today's Events
          border-top: 1px solid rgba(0,0,0,.12);
          border-bottom: 1px solid rgba(255,255,255,.6);
          top: 47%;
-         width: 90%;
+         width: 300px;
 
       }
       &:before {
