--- a/themes/homecoming/scss/_config.scss
+++ b/themes/homecoming/scss/_config.scss
@@ -8,15 +8,15 @@ $yellow: #ffce39;
 /*-------------------------------------------
     Sizes
 -------------------------------------------*/
-$base-font: 16;
-$base-font-size: 16px;
+$base-font: 17;
+$base-font-size: 17px;
 
 
 /*-------------------------------------------
     Fonts
 -------------------------------------------*/
-$heading-font: 'Open Sans', Arial, sans-serif;
-$body-font: 'Open Sans', Arial, sans-serif;
+$heading-font: "proxima-nova-alt-condensed",sans-serif;
+$body-font: "proxima-nova",sans-serif;
 
 
 /*-------------------------------------------
