--- a/themes/homecoming/scss/master.scss
+++ b/themes/homecoming/scss/master.scss
@@ -18,7 +18,7 @@
 @import "elements/_form-bootstrap";
 @import "elements/_grid-bootstrap";
 /*@import "elements/_grid-simple";*/
-/*@import "elements/_tables";*/
+@import "elements/_tables";
 /*@import "elements/_nav-bootstrap";*/
 
 
