--- a/themes/homecoming/scss/site/_calendar.scss
+++ b/themes/homecoming/scss/site/_calendar.scss
@@ -29,7 +29,7 @@ Schedule
   margin-left: 220px;
 }
 .list-item .title {
-  font-size: 24px;
+  font-size: 26px;
   line-height: 1.3;
   margin: 0;
   & a {
@@ -37,7 +37,8 @@ Schedule
   }
 }
 .list-item .meta {
-  font-size: 14px;
+  font-size: 15px;
+  line-height: 1.7;
 }
 .list-item .list-desc {
   margin-bottom: 0;
