--- a/themes/homecoming/scss/master.scss
+++ b/themes/homecoming/scss/master.scss
@@ -19,6 +19,7 @@
 @import "elements/_grid-bootstrap";
 /*@import "elements/_grid-simple";*/
 @import "elements/_tables";
+@import "elements/_glyphicons-bootstrap";
 /*@import "elements/_nav-bootstrap";*/
 
 
