--- a/themes/homecoming/scss/site/_site.scss
+++ b/themes/homecoming/scss/site/_site.scss
@@ -188,16 +188,29 @@ Events by Date
 .eventsbydate li, .announcements li {
 	border-bottom: 1px solid #e5e5e5;
 	margin-bottom: 0;
+	line-height: 1.4;
+	position: relative;
 	& a {
 		color: #444;
 		display: block;
-		padding: 10px 0;
+		padding: 10px 0 10px 23px;
 		transition: all .2s ease-in-out;
 		&:hover {
-			background-color: rgba(255,255,255,.6);
-			padding-left: 5px;
+			background-color: rgba(255,255,255,.5);
+			padding-left: 20px;
+			padding-right: 3px;
 		}
 	}
+}
+.eventsbydate .glyphicon, .announcements .glyphicon {
+	font-size: 10px;
+	padding-left: 0;
+	padding-right: 12px;
+	top: 24px;
+	left: 1px;
+	transition: all .2s ease-in-out;
+	position: absolute;
+	margin-top: -6px;
 }
 
 
