--- a/themes/homecoming/scss/site/_calendar.scss
+++ b/themes/homecoming/scss/site/_calendar.scss
@@ -2,51 +2,70 @@
 Schedule
 --------------------------------------------------------------- */
 .event-list {
-  border-top: 4px solid $yellow;
-  padding: 30px 0;
-  margin: 0 35px;
+	border-top: 4px solid $yellow;
+	padding: 1em 0;
+	margin: 0 1em;
+	@media screen and (min-width: $break-medium) {
+		margin: 0 35px;
+	}
 }
 .list-item {
-  border-bottom: 1px solid #eee;
-  margin-bottom: 1em;
-  padding-bottom: 1em;
+	border-bottom: 1px solid #eee;
+	margin-bottom: 1em;
+	padding-bottom: 1em;
 }
 .list-item:last-of-type {
-  border-bottom: none;
-  margin-bottom: 0;
-  padding-bottom: 0;
+	border-bottom: none;
+	margin-bottom: 0;
+	padding-bottom: 0;
 }
 .list-item .img {
-  border-radius: 3px;
-  overflow: hidden;
-  display: block;
-  float: left;
-  & img {
-    display: block;
-  }
+	background: #fff;
+	padding: 5px;
+	border: 1px solid #ddd;
+	overflow: hidden;
+	display: block;
+	float: left;
+	& img {
+		display: block;
+		width: 120px;
+		@media screen and (min-width: $break-medium) {
+			width: auto;
+		}
+	}
 }
 .list-item .list-content {
-  margin-left: 220px;
+	margin-left: 145px;
+	@media screen and (min-width: $break-medium) {
+		margin-left: 230px;
+	}
 }
 .list-item .title {
-  font-size: 26px;
-  line-height: 1.3;
-  margin: 0;
-  & a {
-    color: #333;
-  }
+	font-size: 20px;
+	line-height: 1.3;
+	margin: 0;
+	& a {
+		color: #333;
+	}
+	@media screen and (min-width: $break-medium) {
+		font-size: 26px;
+	}
 }
 .list-item .meta {
-  font-size: 15px;
-  line-height: 1.7;
+	font-size: 13px;
+	line-height: 1.5;
+	margin-bottom: 1em;
+	@media screen and (min-width: $break-medium) {
+		font-size: 15px;
+	}
 }
 .list-item .list-desc {
-  margin-bottom: 0;
+	margin-bottom: 0;
 }
 
 /* ---------------------------------------------------------------
 Event Page
 --------------------------------------------------------------- */
 .event-img img {
-  display: block;
+	display: block;
 }
