--- a/themes/homecoming/scss/site/_header.scss
+++ b/themes/homecoming/scss/site/_header.scss
@@ -4,11 +4,31 @@
 	position: relative;
 	z-index: 1;
 }
+.header-top {
+	padding: .5em;
+	@media screen and (min-width: $break-small) {
+		padding: 1.2em 0;
+	}
+	@media screen and (min-width: $break-medium) {
+		border-bottom: 1px solid #d1d1d1;
+	}
+}
 .logo {
 	margin: 0;
 	padding: 0;
 	line-height: 1;
-	& a {
+	& img {
+		display: block;
+		width: 120px;
+		@media screen and (min-width: $break-small) {
+			width: auto;
+		}
+	}
+}
+.logo a {
+	float: left;
+	@media screen and (min-width: $break-small) {
+		float: none;
 		position: absolute;
 		left: 50%;
 		margin-left: -69.5px;
@@ -18,34 +38,48 @@
 		width: 139px;
 		z-index: 10;
 	}
-	& img {
-		display: block;
-	}
 }
 /* ---------------------------------------------------------------
 Header Top
 --------------------------------------------------------------- */
-.header-top {
-	border-bottom: 1px solid #d1d1d1;
-	padding: 1.2em 0;
+.audience-wrapper {
+	margin-left: 145px;
+	@media screen and (min-width: $break-small) {
+		margin-left: 0;
+		padding-left: 1em;
+		padding-right: 1em;
+	}
 }
 .audience-nav {
-	float: left;
 	list-style: none;
-	margin: 0;
+	margin: 0 0 13px;
 	padding: 0;
-	& li {
+	@media screen and (min-width: $break-medium) {
+		float: left;
+		margin-bottom: 0;
+	}
+}
+.audience-nav li {
+	margin: 0;
+	@media screen and (min-width: $break-small) {
 		float: left;
 		margin: 0 1.5em 0 0;
-		& a {
-			color: #333;
-			display: block;
-			font-size: 14px;
+	}
+	& a {
+		color: #333;
+		display: block;
+		font-size: 14px;
+		padding: 3px 0;
+		text-decoration: underline;
+		@media screen and (min-width: $break-small) {
+			padding: 0;
 		}
 	}
 }
 .header-date {
-	float: right;
 	font-size: 14px;
 	margin: 0;
+	@media screen and (min-width: $break-small) {
+		float: right;
+	}
 }
