--- a/themes/homecoming/scss/site/_site.scss
+++ b/themes/homecoming/scss/site/_site.scss
@@ -2,8 +2,12 @@
 Base styles
 --------------------------------------------------------------- */
 html {
-	font-size: $base-font-size;
-	line-height: 1.6;
+	font-size: 15px;
+	line-height: 1.5;
+	@media screen and (min-width: $break-small) {
+		font-size: 17px;
+		line-height: 1.6;
+	}
 }
 body {
 	background: #f3f3ee;
@@ -23,8 +27,10 @@ Division Bar
 }
 .division-topbar .wrapper {
 	max-width: 1040px;
-	padding-left: 2em;
-	padding-right: 2em;
+	@media screen and (min-width: $break-medium) {
+		padding-left: 1em;
+		padding-right: 1em;
+	}
 }
 
 /* ---------------------------------------------------------------
@@ -41,31 +47,69 @@ Layout
 	position: relative;
 	z-index: 10;
 }
+.content {
+	position: relative;
+	@media screen and (min-width: $break-medium) {
+		min-height: 700px;
+		padding-right: 300px;
+	}
+}
+.full-width .content {
+	padding-right: 0;
+}
+.sidebar {
+	background: #f5f5f5;
+	border-top: 1px solid rgba(0,0,0,.1);
+	padding: 1em;
+	@media screen and (min-width: $break-medium) {
+		border-top: 0;
+		padding: 30px;
+		position: absolute;
+		right: 0;
+		width: 300px;
+		height: 100%;
+		top: 0;
+	}
+}
 .main-content {
 	border-top: 1px solid rgba(0,0,0,.5);
 	box-shadow: inset 0 1px 0 #fff;
 }
 .main-content {
 	background-color: #fff;
-	margin-top: -25px;
-	min-height: 700px;
-	xpadding: 50px;
 	position: relative;
 	border: 1px solid rgba(0,0,0,.15);
 	box-shadow: 0 0 0 1px rgba(255,255,255,.5);
+	@media screen and (min-width: $break-medium) {
+		margin-top: -25px;
+		min-height: 700px;
+	}
 }
 .article {
-	padding: 30px 35px;
+	padding: 1em;
+	@media screen and (min-width: $break-medium) {
+		padding: 30px 35px;
+	}
 }
 .page-title {
-	margin-top: .25em;
+	font-size: 30px;
+	margin: .25em 0 .25em;
+	text-transform: uppercase;
+	@media screen and (min-width: $break-medium) {
+		font-size: 50px;
+		margin-bottom: .5em;
+	}
 }
 
 /* ---------------------------------------------------------------
 Hero Carousel
 --------------------------------------------------------------- */
 .hero {
-	margin-top: -108px;
+	display: none;
+	@media screen and (min-width: $break-medium) {
+		display: block;
+		margin-top: -108px;
+	}
 }
 .featuredimage {
 	padding-top: 30%;
@@ -408,7 +452,7 @@ Justify
 	 width: 48%;
 	}
 	@media screen and (min-width: $break-medium) {
-	 width: 23%;
+	 width: 24%;
 	}
 }
 .justify .filler {
@@ -448,24 +492,4 @@ Sponsors
 
 .full-image .content-image img {
 	display: block;
-}
-.content {
-	min-height: 700px;
-	padding-right: 300px;
-	xpadding-top: 1px;
-	position: relative;
-}
-.full-width .content {
-	padding-right: 0;
-}
-
-
-.sidebar {
-	position: absolute;
-	background: #f5f5f5;
-	right: 0;
-	width: 300px;
-	height: 100%;
-	top: 0;
-	padding: 30px;
 }
