--- a/themes/homecoming/scss/site/_nav.scss
+++ b/themes/homecoming/scss/site/_nav.scss
@@ -47,24 +47,25 @@ Navigation
 
 /* Left */
 .nav-left, .nav-right {
-	float: left;
-	width: 40%;
+	@media screen and (min-width: $break-medium) {
+		float: left;
+		width: 40%;
+	}
 }
 .nav-right {
-	float: right;
+	@media screen and (min-width: $break-medium) {
+		float: right;
+	}
 }
 
 
-/* current link
-.main-nav .current>a {
+/* current link */
+.nav-main .current > a {
 	background-color: #222;
 	color: $yellow;
 	text-decoration: none;
 }
-.main-nav .menu-5 {
-	margin-left: 177px;
-}
- */
+
 
 
 /* ---------------------------------------------------------------
@@ -106,11 +107,15 @@ Second level drop-down menu
 		}
 	}
 }
-.main-nav > li:hover .level-2 {
+.nav-main > li:hover .level-2 {
 	max-height: 200px;
 	padding: 10px 0;
-	right: 0;
+	left: 0;
 	left: auto;
+}
+.nav-main > li:last-of-type:hover .level-2 {
+	left: auto;
+	right: 0;
 }
 
 
@@ -185,6 +190,7 @@ New
 }
 .expand .nav-title {
 	background: #eee;
+	border-bottom: 1px solid #ddd;
 }
 .nav-title span {
 	border-radius: 4px;
@@ -223,7 +229,6 @@ New
 	}
 }
 .nav-main {
-	border-top: 1px solid #ddd;
 	border-right: 1px solid rgba(0,0,0,.1);
 	list-style: none;
 	margin: 0 auto;
@@ -233,19 +238,24 @@ New
 		text-align: center;
 	}
 }
-.nav-main li {
+.nav-main > li {
 	margin-bottom: 0;
 	@media screen and (min-width: $break-medium) {
 		border-left: 1px solid rgba(0,0,0,.1);
 		float: left;
 		width: 25%;
-		&:first-child {
-
+		&:hover > a {
+			background-color: #222;
+			color: $yellow;
+			text-decoration: none;
 		}
 	}
 }
-.nav-main a {
+.nav-main > li > a {
+	border-bottom: 1px solid #ddd;
 	display: block;
+	font-size: 14px;
+	padding: .8em 0 .8em 15px;
 	position: relative;
 	-webkit-transition: font-size .3s linear;
 	-moz-transition: font-size .3s linear;
@@ -257,32 +267,30 @@ New
 		border-bottom: none;
 		color: #333;
 		font-family: $heading-font;
+		font-size: 15px;
 		padding: 8px 0;
 		white-space: nowrap;
 	}
+	@media screen and (min-width: 900px) {
+		font-size: 16px;
+	}
 	@media screen and (min-width: $break-large) {
-
+		font-size: 17px;
 	}
 	@media screen and (min-width: $break-xlarge) {
 
 	}
 }
-.nav-main li:last-child a {
 
-}
+
 /* Hover State */
 .nav-main a:hover, .nav-main a:focus {
 	background: #eee;
 	@media screen and (min-width: $break-medium) {
-
+		background-color: #222;
+		color: $yellow;
+		text-decoration: none;
 	}
 
 
-}
-/* Active State */
-.nav-main .active a {
-
-	@media screen and (min-width: $break-medium) {
-
-	}
 }
