various css updates
Signed-off-by: Brandon Ewoldt <bewoldt1@gmail.com>

--- a/themes/homecoming/scss/site/_calendar.scss
+++ b/themes/homecoming/scss/site/_calendar.scss
@@ -68,4 +68,5 @@ Event Page
 --------------------------------------------------------------- */
 .event-img img {
 	display: block;
+	margin-bottom: 1.5em;
 }
