--- a/themes/homecoming/scss/site/_site.scss
+++ b/themes/homecoming/scss/site/_site.scss
@@ -6,7 +6,7 @@ html {
 	line-height: 1.5;
 	@media screen and (min-width: $break-small) {
 		font-size: 17px;
-		line-height: 1.6;
+		line-height: 1.5;
 	}
 }
 body {
@@ -51,6 +51,9 @@ Layout
 	position: relative;
 	@media screen and (min-width: $break-medium) {
 		min-height: 700px;
+		padding-right: 250px;
+	}
+	@media screen and (min-width: $break-large) {
 		padding-right: 300px;
 	}
 }
@@ -66,9 +69,12 @@ Layout
 		padding: 30px;
 		position: absolute;
 		right: 0;
-		width: 300px;
+		width: 250px;
 		height: 100%;
 		top: 0;
+	}
+	@media screen and (min-width: $break-large) {
+		width: 300px;
 	}
 }
 .main-content {
@@ -192,31 +198,23 @@ Hero Carousel
 .slides li {
 	margin-bottom: 0;
 }
-/*.HomePage .hero {
-	height: 550px;
-}
-.hero-slider ul {
-	list-style: none;
-	margin: 0;
-	padding: 0;
-}
-.hero-slider li {
-	height: 350px;
+
+
+/* ---------------------------------------------------------------
+Homepage
+--------------------------------------------------------------- */
+.home-callout img {
 	float: left;
-	xbackground-attachment: fixed;
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-position: center top;
+	margin-right: .5em;
+	margin-bottom: .5em;
 }
-.HomePage .hero-slider li {
-	height: 550px;
-}*/
-/*.hero-slider li:nth-child(1) {
-	background-image: url(../images/homecoming_bg3.jpg);
+.home-callout-content {
+	font-size: 15px;
+	line-height: 1.3;
+	@media (min-width: $break-small) {
+		font-size: 13px;
+	}
 }
-.hero-slider li:nth-child(2) {
-	background-image: url(../images/homecoming_bg4.jpg);
-}*/
 
 
 /* ---------------------------------------------------------------
@@ -260,46 +258,14 @@ Events by Date
 }
 
 
-
 /* ---------------------------------------------------------------
-Button Schedule
+Button Archive
 --------------------------------------------------------------- */
-.justify {
-	list-style: none;
-	margin: 0 auto;
-	padding: 0;
-	overflow: hidden;
-	text-align: justify;
-}
-.justify:after {
-	content: '';
-	display: inline-block;
-	width: 100%;
-
-}
-.justify .item {
-	vertical-align: top;
-	margin-bottom: 1em;
-	width: 48%;
-	text-align: center;
-	display: inline-block;
-	@media screen and (min-width: $break-small) {
-	 width: 32%;
-	}
-	@media screen and (min-width: $break-medium) {
-	 width: 23%;
-	}
-	@media screen and (min-width: $break-large) {
-	 width: 15%;
-	}
-}
 .item img {
 	width: 100%;
 	border-radius: 50%;
 }
-.filler {
-	height: 0;
-}
+
 
 .button-archive {
 	margin-top: 3em;
@@ -359,6 +325,94 @@ Council Members
 }
 .council-bio p {
   margin-bottom: 0;
+  margin-top: .5em;
+}
+.council-email {
+	font-size: 14px;
+	vertical-align: middle;
+	margin-left: 5px;
+	color: #333;
+}
+
+
+/* ---------------------------------------------------------------
+Justify
+--------------------------------------------------------------- */
+.justify {
+	font-size: 0.1px;
+	overflow: hidden;
+	text-align: justify;
+}
+.justify:after {
+	content: '';
+	display: inline-block;
+	width: 100%;
+}
+.justify-item {
+	vertical-align: top;
+	width: 100%;
+	text-align: left;
+	display: inline-block;
+}
+.justify-2 .justify-item {
+	@media screen and (min-width: $break-small) {
+	 width: 48%;
+	}
+}
+.justify-3 .justify-item {
+	@media screen and (min-width: $break-small) {
+	 width: 48%;
+	}
+	@media screen and (min-width: $break-medium) {
+	 width: 32%;
+	}
+}
+.justify-4 .justify-item {
+	@media screen and (min-width: $break-small) {
+	 width: 48%;
+	}
+	@media screen and (min-width: $break-medium) {
+	 width: 24%;
+	}
+}
+.justify .filler {
+	height: 0 !important;
+	margin: 0 !important;
+}
+
+
+/* ---------------------------------------------------------------
+Sponsors
+--------------------------------------------------------------- */
+.sponsors {
+	background: #fff;
+	padding: 1px 0;
+}
+.flexslider-sponsor {
+	padding: 5px 10px 10px;
+	overflow: auto;
+	position: relative;
+	& ul {
+		overflow: hidden;
+		max-height: 120px;
+	}
+	& li {
+		float: left;
+		margin: 0;
+	}
+	& li img {
+		display: block;
+	}
+}
+.sponsors .title {
+	font-size: 20px;
+	margin: 1em 0;
+	text-align: center;
+	text-transform: uppercase;
+}
+
+.full-image .content-image img {
+	display: block;
 }
 
 
@@ -415,83 +469,4 @@ Admin Login form fields
 		background-color: #eee;
 		border-color: #adadad;
 	}
-}
-
-/* ---------------------------------------------------------------
-Justify
---------------------------------------------------------------- */
-.justify {
-	font-size: 0.1px;
-	overflow: hidden;
-	text-align: justify;
-}
-.justify:after {
-	content: '';
-	display: inline-block;
-	width: 100%;
-}
-.justify-item {
-	vertical-align: top;
-	width: 100%;
-	text-align: left;
-	display: inline-block;
-}
-.justify-2 .justify-item {
-	@media screen and (min-width: $break-small) {
-	 width: 48%;
-	}
-}
-.justify-3 .justify-item {
-	@media screen and (min-width: $break-small) {
-	 width: 48%;
-	}
-	@media screen and (min-width: $break-medium) {
-	 width: 32%;
-	}
-}
-.justify-4 .justify-item {
-	@media screen and (min-width: $break-small) {
-	 width: 48%;
-	}
-	@media screen and (min-width: $break-medium) {
-	 width: 24%;
-	}
-}
-.justify .filler {
-	height: 0 !important;
-	margin: 0 !important;
-}
-
-/* ---------------------------------------------------------------
-Sponsors
---------------------------------------------------------------- */
-.sponsors {
-	background: #fff;
-	padding: 1px 0;
-}
-.flexslider-sponsor {
-	padding: 5px 10px 10px;
-	overflow: auto;
-	position: relative;
-	& ul {
-		overflow: hidden;
-		max-height: 120px;
-	}
-	& li {
-		float: left;
-		margin: 0;
-	}
-	& li img {
-		display: block;
-	}
-}
-.sponsors .title {
-	font-size: 20px;
-	margin: 1em 0;
-	text-align: center;
-	text-transform: uppercase;
-}
-
-.full-image .content-image img {
-	display: block;
 }
