removing margin on ul
Signed-off-by: Brandon Ewoldt <bewoldt1@gmail.com>

--- a/themes/homecoming/scss/site/_site.scss
+++ b/themes/homecoming/scss/site/_site.scss
@@ -315,6 +315,8 @@ Button Archive
 	border-radius: 50%;
 }
 .button-archive {
+	margin-left: 0;
+	list-style: none;
 	margin-top: 3em;
 	border-top: 4px solid $yellow;
   	padding-top: 30px;
