styling drop down menu
Signed-off-by: Brandon Ewoldt <bewoldt1@gmail.com>

--- a/themes/homecoming/scss/site/_breadcrumbs.scss
+++ b/themes/homecoming/scss/site/_breadcrumbs.scss
@@ -19,6 +19,9 @@
       padding-left: 5px;
    }
 }
+.main .breadcrumbs li {
+   margin-bottom: 0;
+}
 .breadcrumbs li:after {
    color: $yellow;
    content: "\25B8";
